compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/MultiplatformIntermediateFacade.java
public final class MyFacadeKt /* mypack.MyFacadeKt*/ {
  @org.jetbrains.annotations.NotNull()
  public static final mypack.IntermediateClassWithActualization getCommonVariable1();//  getCommonVariable1()

  @org.jetbrains.annotations.NotNull()
  public static final mypack.IntermediateClassWithActualization getCommonVariable2();//  getCommonVariable2()

  @org.jetbrains.annotations.NotNull()
  public static final mypack.IntermediateClassWithActualization getIntermediateVariable1();//  getIntermediateVariable1()

  @org.jetbrains.annotations.NotNull()
  public static final mypack.IntermediateClassWithActualization getIntermediateVariable2();//  getIntermediateVariable2()

  public static final void commonFunction1(@org.jetbrains.annotations.NotNull() mypack.IntermediateClassWithActualization, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass);//  commonFunction1(mypack.IntermediateClassWithActualization, mypack.MyCommonClass)

  public static final void commonFunction2(@org.jetbrains.annotations.NotNull() mypack.IntermediateClassWithActualization, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass);//  commonFunction2(mypack.IntermediateClassWithActualization, mypack.MyCommonClass)

  public static final void intermediateFunction1(@org.jetbrains.annotations.NotNull() mypack.IntermediateClassWithActualization, @org.jetbrains.annotations.NotNull() mypack.IntermediateClassWithActualization, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass, @org.jetbrains.annotations.NotNull() mypack.MyIntermediateClass);//  intermediateFunction1(mypack.IntermediateClassWithActualization, mypack.IntermediateClassWithActualization, mypack.MyCommonClass, mypack.MyIntermediateClass)

  public static final void intermediateFunction2(@org.jetbrains.annotations.NotNull() mypack.IntermediateClassWithActualization, @org.jetbrains.annotations.NotNull() mypack.IntermediateClassWithActualization, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass, @org.jetbrains.annotations.NotNull() mypack.MyIntermediateClass);//  intermediateFunction2(mypack.IntermediateClassWithActualization, mypack.IntermediateClassWithActualization, mypack.MyCommonClass, mypack.MyIntermediateClass)

  public static final void setCommonVariable1(@org.jetbrains.annotations.NotNull() mypack.IntermediateClassWithActualization);//  setCommonVariable1(mypack.IntermediateClassWithActualization)

  public static final void setCommonVariable2(@org.jetbrains.annotations.NotNull() mypack.IntermediateClassWithActualization);//  setCommonVariable2(mypack.IntermediateClassWithActualization)

  public static final void setIntermediateVariable1(@org.jetbrains.annotations.NotNull() mypack.IntermediateClassWithActualization);//  setIntermediateVariable1(mypack.IntermediateClassWithActualization)

  public static final void setIntermediateVariable2(@org.jetbrains.annotations.NotNull() mypack.IntermediateClassWithActualization);//  setIntermediateVariable2(mypack.IntermediateClassWithActualization)
}
